# backend/routes/auth.routes.ts
@@ -9,6 +9,7 @@ router.post("/login", AuthController.login);
 
 router.post("/register", AuthController.register);
 router.post("/user-exists", AuthController.userExists);
+router.post("/confirm-phone-number", AuthController.confirmPhoneNumber);
 router.get("/logout", AuthController.logout);
 router.get("/ping", authMiddleware.validateUser, AuthController.ping);
 
